nginx_ingress/nodeport_access.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      nodePort: 443
      protocol: TCP
      name: https
  selector:
    app: nginx-ingress
